# Deep-Downloader-Pro

./: README.md  index.html  package-lock.json  package.json
backend/: __init__.py  requirements.txt
backend/api/: __init__.py  server.py
backend/core/: __init__.py  downloader.py  duplicate_detector.py  hls_engine.py  metadata_engine.py  playlist_manager.py  resume_engine.py  scheduler.py  stream_sniffer.py  telegram_client.py  torrent_engine.py  torrent_search.py
backend/db/: models.py
backend/utils/: ffmpeg_utils.py  filename_sanitizer.py  folder_watcher.py
bundled/: aria2c
scripts/: build_linux.sh  build_macos.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: DownloadCard.tsx  FormatPicker.tsx  Sidebar.tsx  StatusBar.tsx
src/lib/: api.ts
src/pages/: Dashboard.tsx  History.tsx  Playlist.tsx  Settings.tsx  Telegram.tsx  Torrent.tsx
src/store/: useAppStore.ts
