[package]
name = "deep-downloadr"
version = "1.0.0"
description = "DEEP DOWNLOADR — Professional-grade media downloader & torrent client"
authors = ["kaal"]
edition = "2021"

[lib]
name = "deep_downloadr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
